docs/k8s/mysql-adminer.yml
# 0.0.1.default-mysql.yaml

####################################################
# mysql-server
# 外部 MySQL 的服务地址映射
####################################################
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: mysql-server
spec:
  ports:
  - name: tcp-mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
---
kind: Endpoints
apiVersion: v1
metadata:
  namespace: default
  name: mysql-server
subsets:
  - addresses:
      # 修改实际MySQL服务器的IP地址
      - ip: 10.20.50.50
    ports:
      - name: tcp-mysql
        port: 3306
        protocol: TCP


# 此服务可选安装，用于MySQL数据库的管理提供Web端

####################################################
# mysql-adminer
####################################################
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: mysql-adminer
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: mysql-adminer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: mysql-adminer
spec:
  selector:
    matchLabels:
      app: mysql-adminer
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-adminer
    spec:
      containers:
      - name: mysql-adminer
        image: adminer:4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "512Mi"
          limits:
            memory: "512Mi"

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: mysql-adminer-ingress
spec:
  rules:
  # 修改为学校的根域名
  - host: mysql-adminer.paas.ahut.edu.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: mysql-adminer
          servicePort: http
